syntax = "proto3";

package telemetry.message.event;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";


enum DeviceTypeProto {
    // Варианты значений enum DeviceTypeProto
    DEVICE_MOTION_SENSOR = 0;      // датчик движения
    DEVICE_TEMPERATURE_SENSOR = 1; // датчик температуры
    DEVICE_LIGHT_SENSOR = 2;       // датчик освещённости
    DEVICE_CLIMATE_SENSOR = 3;     // датчик контроля климата
    DEVICE_SWITCH_SENSOR = 4;      // переключатель
}

enum ActionTypeProto {
    ACTION_ACTIVATE = 0;
    ACTION_DEACTIVATE = 1;
    ACTION_INVERSE = 2;
    ACTION_SET_VALUE = 3;
}

enum ConditionTypeProto {
    MOTION = 0;
    LUMINOSITY = 1;
    SWITCH = 2;
    TEMPERATURE = 3;
    CO2LEVEL = 4;
    HUMIDITY = 5;
}

enum ConditionOperationProto {
    EQUALS = 0;
    GREATER_THAN = 1;
    LOWER_THAN = 2;
}


message HubEventProto {
    string hub_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    oneof payload {
        DeviceAddedEventProto device_added = 3;
        DeviceRemovedEventProto device_removed = 4;
        ScenarioAddedEventProto scenario_added = 5;
        ScenarioRemovedEventProto scenario_removed = 6;
    };
}

message DeviceAddedEventProto {
    string id = 1;
    DeviceTypeProto type = 2;
}

message DeviceRemovedEventProto {
    string id = 1;
}

message ScenarioAddedEventProto {
    string name = 1;
    repeated ScenarioConditionProto conditions = 2;
    repeated DeviceActionProto actions = 3;
}

message ScenarioConditionProto {
    string sensorId = 1;
    ConditionTypeProto type = 2;
    ConditionOperationProto operation = 3;
    oneof value {
        bool bool_value = 4;
        int32 int_value = 5;
    }
}

message DeviceActionProto {
    string sensorId = 1;
    ActionTypeProto type = 2;
    int32 value = 3;
}

message ScenarioRemovedEventProto {
    string name = 1;
}

message DeviceActionRequest {
    string hub_id = 1;
    string scenario_name = 2;
    DeviceActionProto action = 3;
    google.protobuf.Timestamp timestamp = 4;
}